--- a/docs/content/deployment/advanced-configuration.mdx
+++ b/docs/content/deployment/advanced-configuration.mdx
@@ -40,6 +40,6 @@ Vyne supports exporting logs to ElasticSearch via Logstash. Here is the way to e
 
 | Mode | Flags |
 | :--- | :--- |
-| Docker | `-e PROFILE='loogstash'  -e logstash.hostname=localhost:5044` |
-| Java | `-Dspring.profiles.active='loogstash'  -Dlogstash.hostname=localhost:5044` |
+| Docker | `-e PROFILE='logstash'  -e logstash.hostname=localhost:5044` |
+| Java | `-Dspring.profiles.active='logstash'  -Dlogstash.hostname=localhost:5044` |
 
