--- a/docs/content/deployment/docker-images-configuration.mdx
+++ b/docs/content/deployment/docker-images-configuration.mdx
@@ -12,7 +12,7 @@ description: Get the Vyne image docker configuration
          - 5701-5721 # Hazelcast cluster ports
          - 9022:9022 # Vyne query api + Vyne UI
       environment:
-         PROFILE: 
+         PROFILE:
          OPTIONS: --eureka.uri=http://eureka:8761
          JVM_OPTS: -Xmx1024m
 ```
@@ -72,7 +72,7 @@ description: Get the Vyne image docker configuration
       <td style="text-align:left"></td>
       <td style="text-align:left"></td>
       <td style="text-align:left"></td>
-      <td style="text-align:left"><code>--logging.level.io.vyne=INFO</code> 
+      <td style="text-align:left"><code>--logging.level.io.vyne=INFO</code>
       </td>
     </tr>
     <tr>
@@ -121,8 +121,8 @@ description: Get the Vyne image docker configuration
 ## Schema Server
 
 ```text
-   file-schema-server:
-      image: vyneco/file-schema-server:${VYNE_VERSION}
+   schema-server:
+      image: vyneco/schema-server:${VYNE_VERSION}
       depends_on:
          - eureka
       ports:
@@ -130,10 +130,10 @@ description: Get the Vyne image docker configuration
       volumes:
          - ./schemas/:/var/lib/vyne/schemas
       environment:
-         PROFILE: 
+         PROFILE:
          OPTIONS: --eureka.uri=http://eureka:8761 --taxi.schema-local-storage=/var/lib/vyne/schemas
          JVM_OPTS: -Xmx1024m
-         
+
 ```
 
 ### Environment options
@@ -192,7 +192,7 @@ description: Get the Vyne image docker configuration
       <td style="text-align:left"></td>
       <td style="text-align:left"></td>
       <td style="text-align:left"></td>
-      <td style="text-align:left"><code>--logging.level.io.vyne=INFO</code> 
+      <td style="text-align:left"><code>--logging.level.io.vyne=INFO</code>
       </td>
     </tr>
     <tr>
@@ -322,7 +322,7 @@ description: Get the Vyne image docker configuration
       <td style="text-align:left"></td>
       <td style="text-align:left"></td>
       <td style="text-align:left"></td>
-      <td style="text-align:left"><code>--logging.level.io.vyne=INFO</code> 
+      <td style="text-align:left"><code>--logging.level.io.vyne=INFO</code>
       </td>
     </tr>
     <tr>
@@ -416,7 +416,7 @@ description: Get the Vyne image docker configuration
     </tr>
     <tr>
       <td style="text-align:left"></td>
-      <td style="text-align:left"><code>--logging.level.io.vyne=INFO</code> 
+      <td style="text-align:left"><code>--logging.level.io.vyne=INFO</code>
       </td>
     </tr>
     <tr>
