--- a/docs/content/querying-with-vyne/query-streaming.mdx
+++ b/docs/content/querying-with-vyne/query-streaming.mdx
@@ -66,18 +66,17 @@ data:{"a":"a","b":"b"}
 
 ### Querying with projection
 
-Streaming queries may also be projected to other types as per regular vyne queries.  Note - a new record is only emitted when
-there is a change in the source data (in this case 'a') and not if the projected data would change due to a change in projection result.
+Streaming queries may also be projected to other types in the same way as regular Vyne queries.
 
-See 'Cask support for Streaming Queries' for details on how this is implemented in
+See <Link to="#cask-support-for-streaming-queries">Cask support for Streaming Queries<Link> for details on how this is implemented
 
 ```text
 stream {a} as c.d[]
 ```
 
-##Example
+## Example
 
-Given a service at https://prices.com/price that returns a stream of events as server side events as
+Given a service at `https://prices.com/price` that returns a stream of events as server side events as
 
 ```
 data:{"instrument":"AAL","price":10.235533}
@@ -123,7 +122,7 @@ stream { InstrumentPrice }
 
 CURL
 
-```text
+```bash
 curl 'http://localhost:9022/api/vyneql?resultMode=RAW' \
 -H 'Accept: text/event-stream' \
 -H 'Content-Type: application/json' \
@@ -133,15 +132,15 @@ curl 'http://localhost:9022/api/vyneql?resultMode=RAW' \
 
 ## Cask support for Streaming Queries
 
-Cask exposes streaming endpoints for all created casks to Vnye allowing querying of casks using both streaming and non-streaming TaxiQL semantics e.g.
+Cask exposes streaming endpoints for all created casks to allowing querying of casks using both streaming and non-streaming TaxiQL semantics e.g.
 
 ```
 { findAll/findOne Type[] }
 { stream Type }
 ```
 
-When a stream query is served by cask, initially all matching rows in the cask are returned the time the query is received.  The running query then remains
-'live' within cask and Vyne.  Cask then monitors the data source for any additions and modifications to records returning them to Vyne
+When a stream query is served by cask, initially all matching rows in the cask are returned the time the query is received.  The running query then remains 'live' within cask and Vyne.  Cask then monitors the data source for any additions and modifications to records, and emits the changes on the stream to Vyne.
+
 
 ## Cask Streaming Query Configuration
 
@@ -149,7 +148,6 @@ The streaming query syntax is supported in Vyne from version 0.19.0.  Support fo
 version 0.19.0 but can be enabled/disabled with the following configuration setting.
 
 ```yml
-
 cask:
   streamQueries:
     enabled: true # [true|false] default = true
