Fix broken link

--- a/docs/content/querying-with-vyne/query-streaming.mdx
+++ b/docs/content/querying-with-vyne/query-streaming.mdx
@@ -68,7 +68,7 @@ data:{"a":"a","b":"b"}
 
 Streaming queries may also be projected to other types in the same way as regular Vyne queries.
 
-See <Link to="#cask-support-for-streaming-queries">Cask support for Streaming Queries<Link> for details on how this is implemented
+See <Link to="#cask-support-for-streaming-queries">Cask support for Streaming Queries</Link> for details on how this is implemented
 
 ```text
 stream {a} as c.d[]
