Added default of 100000 days to cask retention days

--- a/docs/content/casks/cask-evication.mdx
+++ b/docs/content/casks/cask-evication.mdx
@@ -12,7 +12,7 @@ temporary data.
 
 ## Retention period
 
-By default, Cask retains data for 1000 days, after which the data is removed by an internal Cask process
+By default, Cask is configured to retain data indefinitely
 
 
 ## Modifying retention period
