--- a/docs/content/pipelines/pipelines-orchestrator-api.mdx
+++ b/docs/content/pipelines/pipelines-orchestrator-api.mdx
@@ -10,7 +10,7 @@ import { HeadingWrapper, HttpButton } from "../components/http-buttons"
 
 A Swagger UI is available at `http://pipelies-orchestrator:9600/swagger-ui.html`
 
-## <HeadingWrapper><HttpButton /> Get Piplines</HeadingWrapper>
+## <HeadingWrapper><HttpButton /> Get Pipelines</HeadingWrapper>
 
 `http://pipelines-orchestrator:9600/api/pipelines`
 
