--- a/docs/content/release-notes/0.19.0.mdx
+++ b/docs/content/release-notes/0.19.0.mdx
@@ -170,6 +170,10 @@ vyne:
     memberTag: vyne-query-service # Member tags allow delegation of responsibilities
     eurekaUri: http://127.0.0.1:8761/eureka/
 ```
+### File Schema Server Change
+
+file-schema-server renamed as schema-server and hence starting from version 0.19.0 the corresponding docker image name is vyneco/schema-server
+
 
 ## New Features
 
